--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font-family: poppins;
 }
 section {
-  border-top: 1px solid #c4c4c4;
+  border-top: 1px solid rgba(196, 196, 196, 0.2);
 }
 h1,
 h2,
@@ -130,7 +130,7 @@ button {
 .about,
 .work,
 .clients {
-  padding-top: 66px;
+  padding-top: 98px;
   padding-bottom: 120px;
 }
 .about-text {
